修复 数据验证 切换sheet表bug

--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
 							// console.info('cellUpdated',r,c,oldValue, newValue, isRefresh)
 						},
 						sheetActivate:function(index, isPivotInitial, isNewSheet){
-							// console.info(index, isPivotInitial, isNewSheet)
+							console.info(index, isPivotInitial, isNewSheet)
 						},
 						rangeSelect:function(index, sheet){
 							// console.info(index, sheet)
